welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:34: error: reassignment to val
i= ((i + decalage) % taille)
 ^